Добавлено сохранение прогресса с использованием localStorage

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             <button id="upgradeBtn" class="upgrade-btn">Апгрейд склада</button>
         </div>
         
+        <!-- Контейнер для настроек -->
+        <div class="settings-container">
+            <button id="resetProgressBtn" class="reset-btn">Сбросить прогресс</button>
+        </div>
+        
         <!-- Сообщение об отсутствии заказа -->
         <div id="orderMessage" class="message"></div>
     </div>
