--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- Bootstrap JS с Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <!-- Animate.css для анимаций -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> 
+<!-- JS для отслеживания прогресса -->
+<script src="src/js/progress.js" defer></script>
 </head>
 <body>
     <div class="app-container">
